(maint) Ensure explicit dependencies are first
Ensure explicit dependencies are included before system dependencies.
Otherwise you can end up using an installed version of Leatherman header
files instead of the version you're trying to build.

--- a/curl/tests/CMakeLists.txt
+++ b/curl/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 find_package(CURL REQUIRED)
 
-include_directories(${CURL_INCLUDE_DIRS})
+include_directories(BEFORE ${CURL_INCLUDE_DIRS})
 
 if (CURL_STATIC)
     set(CURL_LINK STATIC)
