(LTH-94) Add Boost.Regex to all libs using Leatherman.Logging
On AIX, symbols aren't being resolved from other libraries from dynamic
libraries. In particular, the Boost.Log header files including in
Leatherman.Logging's header uses Boost.Regex, requiring any projects
relying on Leatherman.Logging to link Boost.Regex. Add that dependency.

Leatherman.Execution also had dependencies on Boost.Filesystem that were
being fulfilled from other libraries. Ensure those are called out
explicitly as well, again to resolve runtime failures on AIX.

--- a/dynamic_library/CMakeLists.txt
+++ b/dynamic_library/CMakeLists.txt
@@ -1,3 +1,8 @@
+find_package(Boost 1.54 REQUIRED COMPONENTS regex)
+
+add_leatherman_deps("${Boost_LIBRARIES}")
+add_leatherman_includes("${Boost_INCLUDE_DIRS}")
+
 leatherman_dependency(logging)
 leatherman_dependency(util)
 if(WIN32)
