--- a/curl/CMakeLists.txt
+++ b/curl/CMakeLists.txt
@@ -1,3 +1,8 @@
+find_package(Boost 1.54 REQUIRED COMPONENTS regex)
+
+add_leatherman_deps("${Boost_LIBRARIES}")
+add_leatherman_includes("${Boost_INCLUDE_DIRS}")
+
 if (BUILDING_LEATHERMAN)
     # Create a mock curl library; it needs to be separate to allow for dllimport in the client source
     # Do it first to avoid symbol_exports defined later.
