--- a/execution/CMakeLists.txt
+++ b/execution/CMakeLists.txt
@@ -1,3 +1,8 @@
+find_package(Boost 1.54 REQUIRED COMPONENTS regex filesystem system)
+
+add_leatherman_deps("${Boost_LIBRARIES}")
+add_leatherman_includes("${Boost_INCLUDE_DIRS}")
+
 leatherman_dependency(util)
 leatherman_dependency(nowide)
 leatherman_dependency(logging)
