--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ env:
     - TRAVIS_TARGET=RELEASE
     - TRAVIS_TARGET=DEBUG
     - TRAVIS_TARGET=SHARED_RELEASE
+    - TRAVIS_TARGET=LOCALE_DISABLED
 deploy:
   provider: releases
   api_key:
