(maint) Add option to skip gettext
Adds an option to disable using gettext for generating localization
templates and .mo files. This is the simplest way to avoid build issues
until we have new versions of gettext built on all platforms.

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,7 @@ env:
     - TRAVIS_TARGET=DEBUG
     - TRAVIS_TARGET=SHARED_RELEASE
     - TRAVIS_TARGET=LOCALE_DISABLED
+    - TRAVIS_TARGET=GETTEXT_DISABLED
 deploy:
   provider: releases
   api_key:
