--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,6 +1,6 @@
-find_package(Boost 1.54 REQUIRED)
+find_package(Boost 1.54 REQUIRED COMPONENTS filesystem)
 
-add_leatherman_deps(Wbemuuid.lib userenv.lib)
+add_leatherman_deps(Wbemuuid.lib userenv.lib "${Boost_LIBRARIES}")
 add_leatherman_includes("${Boost_INCLUDE_DIRS}")
 
 leatherman_dependency(nowide)
@@ -14,6 +14,7 @@ if (BUILDING_LEATHERMAN)
 endif()
 
 set(WINDOWS_UTIL_SOURCES
+  "src/file_util.cc"
   "src/registry.cc"
   "src/process.cc"
   "src/user.cc"
@@ -23,3 +24,4 @@ set(WINDOWS_UTIL_SOURCES
 
 add_leatherman_library(${WINDOWS_UTIL_SOURCES})
 add_leatherman_headers(inc/leatherman)
+add_leatherman_test(tests/file_utils_test.cc)
