(LTH-59) Review and mark translatable strings in Leatherman
This update marks a variety of exception and error messages for
translation and updates the leatherman.pot file. All logging
messages appear to be properly marked already.

--- a/json_container/CMakeLists.txt
+++ b/json_container/CMakeLists.txt
@@ -1,4 +1,10 @@
+find_package(Boost 1.54 REQUIRED COMPONENTS regex)
+
+add_leatherman_deps("${Boost_LIBRARIES}")
+add_leatherman_includes("${Boost_INCLUDE_DIRS}")
+
 leatherman_dependency(rapidjson)
+leatherman_dependency(locale)
 
 add_leatherman_library("src/json_container.cc")
 add_leatherman_headers("inc/leatherman")
