--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_leatherman_dir(nowide)
 add_leatherman_dir(locale)
 add_leatherman_dir(logging)
 add_leatherman_dir(rapidjson)
+add_leatherman_dir(valijson)
 add_leatherman_dir(json_container)
 add_leatherman_dir(util)
 add_leatherman_dir(file_util)
