(LTH-117) Switch to compile-time unpacking vendored packages
CMake doesn't handle include file dependencies with ExternalProject_Add.
Switch to unpacking files at compile-time so they can be used in
dependency resolution.

--- a/catch/CMakeLists.txt
+++ b/catch/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_leatherman_vendored("catch-1.4.0.zip" "71b8d1b08ff8da54928521742ffaf448" "include")
+add_leatherman_vendored("catch-1.4.0.zip" "catch" "include")
