--- a/rapidjson/CMakeLists.txt
+++ b/rapidjson/CMakeLists.txt
@@ -1,1 +1,1 @@
-add_leatherman_vendored("rapidjson-1.0.2.zip" "fcb0beba59fc4e1e118a57413503e474" "include")
+add_leatherman_vendored("rapidjson-1.0.2.zip" "rapidjson" "include")
