(LTH-120) Isolate lfs to Leatherman.execution
Solaris large file support is needed for the ctrun functionality in
Leatherman.execution. It's tricky to apply everywhere however, which
caused building Facter with this version of Leatherman to fail. Restrict
large file support flags to Leatherman.execution.

Only applying lfs to some files should be safe according to
http://docs.oracle.com/cd/E19455-01/806-0634/6j9vo5alu/index.html

```
Applications may combine objects produced in the large file compilation
environment with objects produced in the transitional compilation
environment, but must be careful with respect to interoperability
between those objects. Applications should not declare global variables
of types whose sizes change between compilation environments.
```

Also use `open` rather than `open64`. In the large file system
environment these are mappend to `open64`, and map to standard calls in
a 64-bit environment.

--- a/execution/CMakeLists.txt
+++ b/execution/CMakeLists.txt
@@ -28,6 +28,12 @@ if(WIN32)
     add_leatherman_library(src/execution.cc src/windows/execution.cc)
 else()
     if("${CMAKE_SYSTEM_NAME}" MATCHES "SunOS")
+        # LFS flags are needed to compile the posix/solaris/platform.cc such that it links correctly
+        # against the libcontract library. They're not applied universally as they impact the ability
+        # to use other OS functions. This usage is safe as long as global variables based on these flags
+        # are avoided, according to http://docs.oracle.com/cd/E19455-01/806-0634/6j9vo5alu/index.html
+        EXECUTE_PROCESS( COMMAND getconf LFS_CFLAGS OUTPUT_VARIABLE LFS_CFLAGS OUTPUT_STRIP_TRAILING_WHITESPACE )
+        set(LEATHERMAN_CXX_FLAGS "${LEATHERMAN_CXX_FLAGS} ${LFS_CFLAGS}")
         add_leatherman_library(src/execution.cc src/posix/execution.cc src/posix/solaris/platform.cc)
     else()
         add_leatherman_library(src/execution.cc src/posix/execution.cc src/posix/generic/platform.cc)
